--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Meowie❤️</title>
-    <link rel="shortcut icon" href="meow.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/meow.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
