--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Meowie❤️</title>
     <link rel="shortcut icon" href="./images/meow.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas class="stars"></canvas> <!-- Dynamic stars -->
