--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>To Meowie❤️</title>
-    <link rel="shortcut icon" href="./images/meow.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas class="stars"></canvas> <!-- Dynamic stars -->
